[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
hyper = "0.14.23"
regex = "1.10.2"
reqwest = { version = "0.11.13", features = ["cookies"] }
tokio = { version = "1.34.0", features = ["full"] }
num-integer = "0.1.45"
